--- a/src/assets/scss/components/ProjectsSlider.module.scss
+++ b/src/assets/scss/components/ProjectsSlider.module.scss
@@ -8,6 +8,7 @@
     height: 850px;
     overflow: hidden;
     position: relative;
+    z-index: 10;
 
     @include devicesMax(tablet) {
       height: 480px;
@@ -65,6 +66,7 @@
 
     .mediaC {
       position: relative;
+      z-index: -1;
 
       .videoC {
         position: relative;
