--- a/src/assets/scss/pages/Creators.module.scss
+++ b/src/assets/scss/pages/Creators.module.scss
@@ -97,6 +97,8 @@
         @include dims(30vw, 50vw);
         border-radius: 32px;
         overflow: hidden;
+        position: relative;
+        z-index: 10;
 
         display: grid;
         place-items: center;
@@ -115,6 +117,8 @@
         .video {
           @include dims(100%);
           object-fit: cover;
+          position: relative;
+          z-index: -1;
         }
       }
 
@@ -125,6 +129,7 @@
         padding: 2rem 1.5rem;
         backdrop-filter: blur(16px);
         -webkit-backdrop-filter: blur(16px);
+        z-index: 20;
 
         display: flex;
         flex-direction: column;
@@ -194,6 +199,7 @@
         -webkit-backdrop-filter: blur(16px);
         border-radius: 16px;
         padding: 2rem;
+        z-index: 20;
 
         display: grid;
         grid-template-rows: repeat(2, 1fr);
